--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
-.vscode/
-node_modules/
+.DS_Store
+node_modules
+/dist
+
+package-lock.json
+
+.env.local
+.env.*.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
