--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.19.1",
-    "vue": "^3.2.21"
+    "vue": "^3.2.21",
+    "vue-i18n": "^8.26.7",
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli": "^4.5.15",
